# poc-scada

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/poc-scada-cli/: Cargo.toml
crates/poc-scada-cli/src/: color.rs  main.rs  spinner.rs
crates/poc-scada-core/: Cargo.toml
data/: README.md
data/4sics/: 4SICS-GeekLounge-151022-sample.pcap
data/dnp3-iti/: assign_class.pcap  auth_change_session_keys.pcap  auth_control_challenge_response.pcap  cold_restart_and_response.pcap  dataset_exchange.pcap  direct_operate_analog_output.pcap  direct_operate_crob_malform_but_good_crc.pcap  direct_operate_no_ack_crob.pcap  directoperate_and_response.pcap  disable_unsolcited_and_response.pcap  enable_unsolicited_and_response.pcap  file_delete.pcap  file_list_directory.pcap  file_read.pcap  file_write.pcap  full_exchange.pcap  immediate_freeze.pcap  lan_time_sync.pcap  operate_aggressive_mode.pcap  read_and_response.pcap  select_operate_and_responses.pcap  serial_time_sync.pcap  unsolcited_response_and_confirm.pcap  warm_restart_and_response.pcap  write_binary_output.pcap  write_iin_and_response.pcap  write_vto_empty_string.pcap
resources/: poc-scada-refactor-01.txt
src/: lib.rs  main.rs  pcap.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/detections/: dangerous_function_code.rs  mod.rs  select_before_operate.rs
src/dnp3/: application.rs  link.rs  mod.rs
tests/: integration.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: animation.ts  main.ts  style.css  types.ts
(+14 files in other folders)
