[package]
name = "poc-scada-tauri"
# Hardcoded rather than `.workspace = true`: tauri-build's manifest parser
# (cargo_toml 0.15.3) doesn't resolve Cargo's workspace-inheritance syntax
# and fails with "can't load root workspace" if these are inherited here.
version = "0.1.0"
# 2021, not 2024 like the rest of the workspace: cargo_toml 0.15.3 (used by
# tauri-build) doesn't recognize the "2024" edition string. Editions can
# differ per-crate in one workspace, so this is safe to pin separately.
edition = "2021"
description = "poc-scada desktop app: DNP3 DPI with a source/destination traffic animation"
license = "MIT"
default-run = "poc-scada-tauri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
poc-scada-core = { path = "../crates/poc-scada-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.3", features = ["dialog-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
